examples/c/error-codes/violates-constraint/nonfatal/CV-TCANON3-bad-static.output
CV-TCANON3-bad-static.c:1:1: error: Function declared without a return type.

    Constraint violation (CV-TCANON3):
        see C11 section 6.9.1:3 http://rvdoc.org/C11/6.9.1
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

CV-TCANON3-bad-static.c:5:1: error: Function declared without a return type.

    Constraint violation (CV-TCANON3):
        see C11 section 6.9.1:3 http://rvdoc.org/C11/6.9.1
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

