examples/c/error-codes/violates-constraint/nonfatal/CV-TCANON3-bad-static.c
f(x) int x; {
      return x;
}

main(void) {
      return f(0);
}
